# netviz

./: .gitignore  AGENTS.md  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt
config/: devices.yaml  secrets.yaml.example  settings.yaml
docs/: USER_GUIDE.md
netops_toolkit/: __init__.py  __main__.py  cli.py  interactive.py
netops_toolkit/config/: __init__.py  config_manager.py  device_inventory.py
netops_toolkit/core/: __init__.py  logger.py  system_info.py
netops_toolkit/plugins/: __init__.py  base.py
netops_toolkit/plugins/device_mgmt/: __init__.py  config_backup.py  config_diff.py  ssh_batch.py
netops_toolkit/plugins/diagnostics/: __init__.py  dns_lookup.py  host_discovery.py  mtr.py  netstat.py  ping.py  route_table.py  snmp_query.py  tcp_connect.py  traceroute.py
netops_toolkit/plugins/performance/: __init__.py  bandwidth_test.py  network_quality.py
netops_toolkit/plugins/scanning/: __init__.py  arp_scan.py  port_scan.py
netops_toolkit/plugins/utils/: __init__.py  base64_tool.py  config_validator.py  http_debug.py  ip_converter.py  mac_lookup.py  netinfo.py  password_generator.py  ssl_checker.py  subnet_calc.py  wake_on_lan.py  whois_lookup.py
netops_toolkit/tui/: __init__.py  app.py
netops_toolkit/tui/screens/: __init__.py  category_screen.py  help_screen.py  main_screen.py  plugin_screen.py  settings_screen.py
netops_toolkit/tui/styles/: netops.tcss
netops_toolkit/tui/widgets/: __init__.py  menu_button.py  result_view.py
netops_toolkit/ui/: __init__.py  components.py  menu.py  theme.py
netops_toolkit/utils/: __init__.py  dependency_utils.py  export_utils.py  network_utils.py  platform_utils.py  preset_utils.py  security_utils.py  ssh_utils.py
